less/home-page.less
// Homepage Content

#home {
  .columns(space-between, center);
  height: 100vh;
  max-width: 100%;
  position: scroll;
  .bg-img {
    min-height: 720px;
    left: 0;
    top: 0;
    right: 0;
    bottom: 0;
    z-index: -1;
    position: absolute;
    background-color: black;
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-size: cover;
    display: block;
  }
  .main-header {
    .columns(center, space-around);
    text-align: center;
    margin: 15% 0;
    h1 {
      font-size: 7.5rem;
      margin: 0.5% auto;
      color: white;
    }
    h3 {
      .fonts(2.4rem, white);
      font-family: 'Varela Round', sans-serif;
      letter-spacing: 0.15rem;
    }
    .buttons {
      .custom-layout(center,center);
      .cta1 {
        .custom-btn();
        background-color: white;
        border: 2px solid white;
      }
      .cta2 {
        .custom-btn();
        background-color: @pale;
        border: 2px solid @pale;
      }
    }
  }
}

.section1-container {
  .columns(center, center);
  margin: 12% 5% 5% 5%;
  width: 90%;
  height: 100%;
  background-color: white;
  color: black;
  .section1-title {
    width: 100%;
    h2 {
      .title-text();
    }
    .line-break {
      .line();
    }
  }
  .box-container {
    .custom-layout(space-between, flex-start);
    margin: 3% auto;
    :hover {
      background-color: #dbdbdb;
      -webkit-transition: background-color 500ms linear;
      -ms-transition: background-color 500ms linear;
      transition: background-color 500ms linear;
    }
    .box {
      display: block;
      width: 30%;
      text-align: center;
      padding: 40px 20px;
      border: 1px solid #ededed;
      margin: 15px 0px;
      .icons {
        filter: invert(34%) sepia(86%) saturate(5313%) hue-rotate(137deg) brightness(99%) contrast(101%);
      }
      h3 {
        font-size: 2.4rem;
        font-family: 'Montserrat', sans-serif;
        margin: 7% 0;
      }
      p {
        .fonts(1.8rem,#8a8a8a);
        padding-bottom: 2%;
      }
      a {
        font-size: 1.8rem;
      }
    }
  }
}

.section2-container {
  width: 100%;
  background-color: #FAFAFA;
  border-top: 1px solid #EEE;
  border-bottom: 1px solid #EEE;
  padding-bottom: 4%;
  .section2-title {
    width: 100%;
    margin-top: 8%;
    h2 {
      .title-text();
    }
    .line-break {
      .line();
    }
  }
  .featured-container {
    .wrap(space-around, center);
    width: 90%;
    margin: 4% auto;
    .featured-news {
      width: 24%;
      margin: 1% 3%;
    }
  }
}

.section3-container {
  width: 100%;
  background-color: white;
  .section3-title {
    width: 100%;
    margin-top: 8%;
    h2 {
      .title-text();
    }
    .line-break {
      .line();
    }
  }
  .contact-container {
    width: 60%;
    background-color: #FAFAFA;
    border: 2px solid #EEE;
    padding: 2% 0;
    margin: 4% auto;
    margin-bottom: 8%;
    border-radius: 10px;

  }
}

